pkg/lang/testdata/ub/stack-values/invalid/input-reference-in-comprehension-source.ub
factory: {
  inputs: { x: [for n in input.xs: n] }
}
